# content-retrieval

./: README.md  app.py  chunker.md  inspect_db.py  logging_utils.py  pipeline.py  pipeline_ii.py  pyproject.toml  run_pipeline.sh  syllabus.json  utils.py
app/: chunk_resolver.py  context.py  services.py
chats/: 6a33222b-4ef9-4f43-9263-0341281ee6c1.json  de3adfa2-d1e0-4303-84c0-8b5aa0fee68e.json  fa663f10-6b16-49d8-aed1-b14b15688b4d.json
chunker/: config.py  image_extractor.py  json_builder.py  main.py  pdf_reader.py  text_chunker.py
db/: build_vector_db.py  embed_fact.py  vs_builder.py
generation/: cache.py  callbacks.py  constants.py  llm.py  prompts.py  prompts.yaml
generation/route/: router_llm.py  router_schema.py  routing.py
generation/tools/: web_search.py
memory/: chat_retriever.py  chat_store.py  session_memory.py
retriever/: multibook_retriever.py  retriever_fact.py  tavily.py
tocs/: data-visualization-principles-and-practice_toc.json  visualizing-data_toc.json
