[tool.poetry]
name = "data-analysis-visualization"
version = "0.1.0"
description = ""
authors = ["yukesh432 <nsiwansh@gmail.com>"]
readme = "README.md"
packages = [{ include = "bookchunker" }]

[tool.poetry.dependencies]
python = "^3.12"
frontend = "^0.0.3"
tools = "^1.0.23"
pdfplumber = "^0.11.9"
tqdm = "^4.67.3"
pymupdf = "^1.27.1"
streamlit = "^1.54.0"
langchain = "^1.2.10"
langchain-openai = "^1.1.9"
openai = "^2.20.0"
python-dotenv = "^1.2.1"
langchain-chroma = ">=0.1.2"
langchain-community = "^0.4.1"
sentence-transformers = "^5.2.3"
tavily-python = "^0.7.21"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
plotly = "^6.6.0"
nbformat = "^5.10.4"
geopandas = "^1.1.3"
dash = "^4.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
